--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Github user search</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="css/stylesheet.css"></script>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
@@ -11,7 +12,8 @@
     <script src="js/app.js"></script>
     <script src="js/gitUserSearchController.js"></script>
     <script src="js/searchFactory.js"></script>
-
+  
+  
   </head>
 
   <body ng-controller="GitUserSearchController as searchCtrl">
